--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: FHIL SOPs
 description: Standard operating procedures for the Fred Hutch Innovation Lab
 theme: just-the-docs
 
-url: https://FHIL-SOPs.github.io
+url: https://Fred-Hutch-Innovation-Lab.github.io/SOPs
 
 aux_links:
   Template Repository: https://github.com/Fred-Hutch-Innovation-Lab/SOPs
