--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ theme: just-the-docs
 url: https://Fred-Hutch-Innovation-Lab.github.io/SOPs
 
 aux_links:
-  Template Repository: https://github.com/Fred-Hutch-Innovation-Lab/SOPs
+  Source repo: https://github.com/Fred-Hutch-Innovation-Lab/SOPs
